# deser_benchmarks

./: Cargo.toml  README.md  build.rs  flake.nix
benches/: codec.rs  encoding_size.rs
schema/: block.capnp
src/: lib.rs  manual_zerocopy.rs  manual_zerocopy_v2.rs  manual_zerocopy_v3.rs
