[package]
name = "codec-comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
capnp = "0.23.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rkyv = "0.8.12"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "codec"
harness = false

[build-dependencies]
capnpc = "0.23.2"
